[package]
name = "instr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
argh = "0.1.9"
ariadne = "0.1.5"
chumsky = "0.8.0"
log = "0.4.17"

[dependencies.env_logger]
version = "0.10.0"
default-features = false
features = ["auto-color"]
